--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Aditya Sarin</title>
+        <title>Veerendra Kanagala</title>
 
         <link rel="icon" href="assets/img/favicon.ico" />
 
