--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Veerendra</h1>
-                            <h3 class="home_subtitle">Assistant System Engineer @ TCS, Hyderabad</h3>
+                            <h3 class="home_subtitle">Assistant System Engineer @ TCS, Hyderabad.</h3>
                             <p class="home__description"> I am interested in App development, Big Data and Machine Learning.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me<i class="uil uil-message button__icon"></i>
