--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                         </div> -->
                         <div class="about__buttons">
-                            <a  download="" href="assets/pdf/Veerendra_Resume.pdf" class="button button--flex">
+                            <a  download="" href="assets/pdf/Veerendra Resume.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
