--- a/index.html
+++ b/index.html
@@ -699,7 +699,13 @@
 
                             <!--==================== QUALIFICATION 2 ====================-->
                             <div class="qualification__data">
+				<div></div>
 
+                                <div>
+                                    <span class="qualification__rounder"></span>
+                                   
+
+                                </div>
                                 <div>
                                     <h3 class="qualification__title">Member</h3>
                                     <span class="qualification__subtitle">IETE Student Forum</span>
