--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
 
                             <div>
                                 <h3 class="contact__title">Call Me</h3>
-                                <span class="contact__subtitle">+91-9920995614</span>
+                                <span class="contact__subtitle">+91-7093316781</span>
                             </div>
                         </div>
 
@@ -987,7 +987,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">aditya28sarin@gmail.com</span>
+                                <span class="contact__subtitle">veerendra.kanagala9@gmail.com</span>
                             </div>
                         </div>
 
@@ -1000,7 +1000,7 @@
                         </div>
                     </div>
 
-                    <form action="mailto:aditya28sarin@gmail.com" method="post" enctype="text/plain" class="contact__form grid">
+                    <form action="mailto:veerendra.kanagala9@gmail.com" method="post" enctype="text/plain" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -1037,14 +1037,14 @@
             <div class="footer footer__bg">
                 <div class="footer__container container grid">
                     <div>
-                        <h1 class="footer__title">Aditya</h1>
-                        <span class="footer__subtitle">CS Grad @ Virginia Tech</span>
+                        <h1 class="footer__title">Veerendra</h1>
+                        <span class="footer__subtitle">ASE @ TCS</span>
                     </div>
 
                     <ul class="footer__links">
-                        <li>
+                        <!--<li>
                             <a href="#services" class="footer__link">Publications</a>
-                        </li>
+                        </li>-->
                         <li>
                             <a href="#portfolio" class="footer__link">Projects</a>
                         </li>
@@ -1054,21 +1054,19 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.facebook.com/adit.sarin/" target="_blank" class="footer__social">
+                        <a href="https://www.facebook.com/veerendra kanagala/" target="_blank" class="footer__social">
                             <i class="uil uil-facebook-f"></i>
                         </a>
 
-                        <a href="https://www.instagram.com/_adityasarin/" target="_blank" class="footer__social">
+                        <a href="https://www.instagram.com/veerendra kanagala/" target="_blank" class="footer__social">
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="https://twitter.com/AdityaSarin14" target="_blank" class="footer__social">
-                            <i class="uil uil-twitter-alt"></i>
-                        </a>
+                        
                     </div>
                 </div>
 
-                <p class="footer__copy">&#169; Aditya Sarin. All rights reserved </p>
+                <p class="footer__copy">&#169; Veerendra Kanagala. All rights reserved </p>
             </div>
         </footer>
         
