--- a/index.html
+++ b/index.html
@@ -1054,11 +1054,11 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.facebook.com/veerendra kanagala/" target="_blank" class="footer__social">
+                        <a href="https://www.facebook.com/veerendra.kanagala/" target="_blank" class="footer__social">
                             <i class="uil uil-facebook-f"></i>
                         </a>
 
-                        <a href="https://www.instagram.com/veerendra kanagala/" target="_blank" class="footer__social">
+                        <a href="https://www.instagram.com/veerendra_kanagala/" target="_blank" class="footer__social">
                             <i class="uil uil-instagram"></i>
                         </a>
 
