--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
                             <i class="uil uil-map-marker contact__icon"></i>
                             <div>
                                 <h3 class="contact__title">Location</h3>
-                                <span class="contact__subtitle">Mumbai, India</span>
+                                <span class="contact__subtitle">Guntur, India</span>
                             </div>
                         </div>
                     </div>
