--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.facebook.com/veerendra.kumar.kanagala/" target="_blank" class="footer__social">
+                        <a href="https://www.facebook.com/NANI.VEERU.9999/" target="_blank" class="footer__social">
                             <i class="uil uil-facebook-f"></i>
                         </a>
 
