--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                 </div>
             </section>
 
-            <!--==================== SERVICES ====================-->
+           <!-- <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
                 <h2 class="section__title">Publications</h2>
                 <span class="section__subtitle">My research papers.</span>
@@ -945,6 +945,7 @@
                     </div>
                 </div>
             </section>
+		    -->
             
           
 
