--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 
                         <!--==================== PORTFOLIO 4 ====================-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/Project4.png" alt="" class="portfolio__img">
+                            <img src="assets/img/Project4.jpg" alt="" class="portfolio__img">
                             
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">HTH Drone</h3>
@@ -799,7 +799,7 @@
 
 
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/Project5.png" alt="" class="portfolio__img">
+                            <img src="assets/img/Project5.jpg" alt="" class="portfolio__img">
                             
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">FTP to Amazon S3</h3>
