--- a/index.html
+++ b/index.html
@@ -761,6 +761,10 @@
                                 <p class="portfolio__description">An automated device that collects floating wastes in the drainages and rivers.</p>
                                 
                             </div>
+				<span class="button button--flex button--small portfolio__button">
+                                        View more
+                                        <i class="uil uil-arrow-right button__icon"></i>
+                                    </span>
                         </div>
 
                         <!--==================== PORTFOLIO 2 ====================-->
