--- a/index.html
+++ b/index.html
@@ -764,7 +764,31 @@
                                         <i class="uil uil-arrow-right button__icon"></i>
                                     </span>
                             </div>
-				
+				<div class="services__modal">
+                                    <div class="services__modal-content">
+                                        <h4 class="services__modal-title">SDE Intern | Symphony Fintech</h4>
+                                        <i class="uil uil-times services__modal-close"></i>
+        
+                                        <ul class="services__modal-services grid">
+                                            <li class="services__modal-service">
+                                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                                <p>Developed XTS platform using Angular.JS and JQuery along with socket.io that attracted 12,000 traders in 2 months.</p>
+                                            </li>
+                                            <li class="services__modal-service">
+                                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                                <p>Converted wireframes into CSS and JavaScript code with Bootstrap, JQuery and Material UI.</p>
+                                            </li>
+                                            <li class="services__modal-service">
+                                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                                <p>Designed the front end documentation of the XTS marked data API using ReactJS, HTML and CSS.</p>
+                                            </li>
+                                            <li class="services__modal-service">
+                                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                                <p>Ensured the scalability of the Blitztrader web site by optimising them for loading spead, brought down from 5 seconds to 1.1 seconds, and performance.</p>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                         </div>
 
                         <!--==================== PORTFOLIO 2 ====================-->
