--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                                    <image class="home__blob-img" x='19' y='2' xlink:href="assets/img/profile-1.jpg"/>
+                                    <image class="home__blob-img" x='19' y='2' xlink:href="assets/img/Profile1.jpg"/>
                                 </g>
                             </svg>
                             
@@ -137,7 +137,7 @@
                 <span class="section__subtitle">My Introdcution</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about__img">
+                    <img src="assets/img/Profile2.jpg" alt="" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Passionate about building scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
