--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
                 <h2 class="section__title">About Me</h2>
-                <span class="section__subtitle">My Introdcution</span>
+                <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/about.jpg" alt="" class="about__img">
+                    <img src="assets/img/Profile2.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Passionate about building scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
