--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                                    <image class="home__blob-img" x='19' y='2' xlink:href="assets/img/profile.jpg"/>
+                                    <img src="assets/img/profile.jpg" alt="" class="about__img">
                                 </g>
                             </svg>
                             
@@ -141,20 +141,7 @@
 
                     <div class="about__data">
                         <p class="about__description">Passionate about building scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
-<!--                         <div class="about__info">
-                            <div>
-                                <span class="about__info-title">01+</span>
-                                <span class="about__info-name">Years <br> experience</span>
-                            </div>
-                            <div>
-                                <span class="about__info-title">10+</span>
-                                <span class="about__info-name">Completed <br> projects</span>
-                            </div>
-                            <div>
-                                <span class="about__info-title">03+</span>
-                                <span class="about__info-name">Companies <br> worked</span>
-                            </div>
-                        </div> -->
+
                         <div class="about__buttons">
                             <a  download="" href="assets/pdf/Veerendra Resume.pdf" class="button button--flex">
                                 Download Resume<i class="uil uil-download-alt button__icon"></i>
