--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             </div>
 
                         <div class="home__img">
-                             <img src="assets/img/Profile1.jpg" alt="" class="about__img">
+                             <img src="assets/img/Profile.jpg" alt="" class="about__img">
                                 
                         </div>
 
