--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <span class="section__subtitle">My Introduction</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/Profile2.png" alt="" class="about__img">
+                    <img src="assets/img/About.png" alt="" class="about__img">
 
                     <div class="about__data">
                         <p class="about__description">Passionate about building scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
