--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#portfolio" class="nav__link">
+                            <a href="#project" class="nav__link">
                                 <i class="uil uil-scenery nav__icon"></i>Projects
                             </a>
                         </li>
 
                         <li class="nav__item">
-                            <a href="#services" class="nav__link">
+                            <a href="#certification" class="nav__link">
                                 <i class="uil uil-briefcase nav__icon"></i>Certifications
                             </a>
                         </li>
