--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 
                         <!--==================== PROJECT 4 ====================-->
                         <div class="project__content grid swiper-slide">
-                            <img src="assets/img/Project4.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/Project4.jpg" alt="" class="project__img">
                             
                             <div class="project__data">
                                 <h3 class="project__title">HTH Drone</h3>
@@ -783,7 +783,7 @@
 
 			<!--==================== PROJECT 5 ====================-->
                         <div class="project__content grid swiper-slide">
-                            <img src="assets/img/Project5.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/Project5.jpg" alt="" class="project__img">
                             
                             <div class="project__data">
                                 <h3 class="project__title">FTP to Amazon S3</h3>
@@ -915,7 +915,7 @@
                             <a href="#services" class="footer__link">Publications</a>
                         </li>-->
                         <li>
-                            <a href="#portfolio" class="footer__link">Projects</a>
+                            <a href="#project" class="footer__link">Projects</a>
                         </li>
                         <li>
                             <a href="#contact" class="footer__link">Contact</a>
