--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             </section>
 
               <!--==================== PROJECTS ====================-->
-              <section class="project section" id="project">
+              <section class="portfolio section" id="project">
                 <h2 class="section__title">Projects</h2>
                 <span class="section__subtitle"></span>
 
@@ -794,19 +794,9 @@
                                     </span>
                             </div>
                         </div>
+		
 		</div>
-                        
-
-                        
-                    <!-- <div class="swiper-button-next">
-                        <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
-                    </div>
-                    <div class="swiper-button-prev">
-                        <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
-                    </div> -->
-
                     <div class="swiper-pagination"></div>
-
                 </div>
             </section>
 
