--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             </section>
 
               <!--==================== PROJECTS ====================-->
-              <section class="portfolio section" id="project">
+              <section class="project section" id="project">
                 <h2 class="section__title">Projects</h2>
                 <span class="section__subtitle"></span>
 
