--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#project" class="nav__link">
+                            <a href="#portfolio" class="nav__link">
                                 <i class="uil uil-scenery nav__icon"></i>Projects
                             </a>
                         </li>
@@ -718,7 +718,7 @@
             </section>
 
               <!--==================== PROJECTS ====================-->
-              <section class="portfolio section" id="project">
+              <section class="portfolio section" id="portfolio">
                 <h2 class="section__title">Projects</h2>
                 <span class="section__subtitle"></span>
 
@@ -905,7 +905,7 @@
                             <a href="#services" class="footer__link">Publications</a>
                         </li>-->
                         <li>
-                            <a href="#project" class="footer__link">Projects</a>
+                            <a href="#portfolio" class="footer__link">Projects</a>
                         </li>
                         <li>
                             <a href="#contact" class="footer__link">Contact</a>
