--- a/index.html
+++ b/index.html
@@ -735,7 +735,21 @@
                                         View more
                                         <i class="uil uil-arrow-right button__icon"></i>
                                     </span>
-                            
+                             </div>
+				<div class="services__modal">
+                                    <div class="services__modal-content">
+                                        <h4 class="services__modal-title">Master's CS | Virginia Tech</h4>
+                                        <i class="uil uil-times services__modal-close"></i>
+
+                                        <ul class="services__modal-services grid">
+                                            <li class="services__modal-service">
+                                                <i class="uil uil-check-circle services__modal-icon"></i>
+                                                <p>Incoming Graduate Student at Virginia Tech, Fall 2021</p>
+                                            </li>
+
+                                        </ul>
+                                    </div>
+
                                 </div>
                         </div>
 
