--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </li>
 
                         <li class="nav__item">
-                            <a href="#portfolio" class="nav__link">
+                            <a href="#project" class="nav__link">
                                 <i class="uil uil-scenery nav__icon"></i>Projects
                             </a>
                         </li>
@@ -718,11 +718,11 @@
             </section>
 
               <!--==================== PROJECTS ====================-->
-              <section class="portfolio section" id="portfolio">
+              <section class="portfolio section" id="project">
                 <h2 class="section__title">Projects</h2>
                 <span class="section__subtitle"></span>
 
-                <div class="portfolio __container container swiper-container">
+                <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
                         <!--==================== PROJECT 1 ====================-->
                         <div class="portfolio__content grid swiper-slide">
@@ -736,21 +736,7 @@
                                         <i class="uil uil-arrow-right button__icon"></i>
                                     </span>
                              </div>
-				<div class="services__modal">
-                                    <div class="services__modal-content">
-                                        <h4 class="services__modal-title">Master's CS | Virginia Tech</h4>
-                                        <i class="uil uil-times services__modal-close"></i>
-
-                                        <ul class="services__modal-services grid">
-                                            <li class="services__modal-service">
-                                                <i class="uil uil-check-circle services__modal-icon"></i>
-                                                <p>Incoming Graduate Student at Virginia Tech, Fall 2021</p>
-                                            </li>
-
-                                        </ul>
-                                    </div>
-
-                                </div>
+				
                         </div>
 
                         <!--==================== PROJECT 2 ====================-->
@@ -929,7 +915,7 @@
                             <a href="#services" class="footer__link">Publications</a>
                         </li>-->
                         <li>
-                            <a href="#portfolio" class="footer__link">Projects</a>
+                            <a href="#project" class="footer__link">Projects</a>
                         </li>
                         <li>
                             <a href="#contact" class="footer__link">Contact</a>
