--- a/index.html
+++ b/index.html
@@ -728,6 +728,8 @@
                         <div class="portfolio__content grid swiper-slide">
                             <img src="assets/img/Project1.JPG" alt="" class="portfolio__img">
                             
+				<div>
+					
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Automatic Garbage Cleaner</h3>
                                 <p class="portfolio__description">An automated device that collects floating wastes in the drainages and rivers.</p>
@@ -758,6 +760,7 @@
                                         </ul>
                                     </div>
                                 </div>
+				 </div>
                         </div>
 
                         <!--==================== PROJECT 2 ====================-->
