--- a/index.html
+++ b/index.html
@@ -815,23 +815,24 @@
 			<!--==================== CERTIFICATION 1  ====================-->
                    <div class="services__content">
 			<div>
-			<i class="uil uil-file-landscape-alt services__icon"></i>
+			
 			<div data-iframe-width="200" data-iframe-height="300" data-share-badge-id="8dd734e4-5fc4-40aa-9925-c86220e67c35" 
 			     data-share-badge-host="https://www.credly.com">
 			</div>
 			<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 			   </div>
+		</div>
 	
 			 <!--==================== CERTIFICATION 2  ====================-->
                    <div class="services__content">
 			<div>
-			<i class="uil uil-file-landscape-alt services__icon"></i>
+			
 			<div data-iframe-width="200" data-iframe-height="300" data-share-badge-id="e210a917-786a-489d-b2c4-8dcb4f4e630d" 
 			     data-share-badge-host="https://www.credly.com">
 			</div>
 				<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 			   </div>   
-			   
+		</div>   
 			
 		    </div>
 		 </section>	
