--- a/index.html
+++ b/index.html
@@ -831,6 +831,16 @@
 			     data-share-badge-host="https://www.credly.com">
 			</div>
 				<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+			   </div> 
+			
+			<!--==================== CERTIFICATION 3  ====================-->
+                   
+			<div>
+			
+			<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="12718264-c498-4d01-9167-aa8ebc2b6aff" 
+			     data-share-badge-host="https://www.credly.com">
+			</div>
+				<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 			   </div>   
 		 
 			
