--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Veerendra</h1>
                             <h3 class="home_subtitle">Assistant System Engineer @ TCS, Hyderabad.</h3>
-                            <p class="home__description"> I am interested in App development, Big Data and Machine Learning.</p>
+                            <p class="home__description"> I am interested in Machine Learning, Big Data Analytics and App Development.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me<i class="uil uil-message button__icon"></i>
                             </a>
@@ -125,7 +125,7 @@
                     <img src="assets/img/About.png" alt="" class="about__img">
 
                     <div class="about__data">
-                        <p class="about__description">Passionate about building scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
+                        <p class="about__description">Passionate about building machine learning algorithms and scalable full stack applications. Capable of managing diverse responsibilities, learning new technologies, delivering work on time and presenting ideas across the team.</p>
 
                         <div class="about__buttons">
                             <a  download="" href="assets/pdf/Veerendra Resume.pdf" class="button button--flex">
