--- a/index.html
+++ b/index.html
@@ -731,7 +731,8 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Automatic Garbage Cleaner</h3>
                                 <p class="portfolio__description">An automated device that collects floating wastes in the drainages and rivers.</p>
-				    <span class="button button--flex button--small button--link services__button>
+				    <span class="button button--flex button--small button--link portfolio__button>
+						 <!--button button--flex button--small button--link services__button>-->
 						
                                         View more
                                         <i class="uil uil-arrow-right button__icon"></i>
