--- a/index.html
+++ b/index.html
@@ -732,12 +732,13 @@
                                 <h3 class="portfolio__title">Automatic Garbage Cleaner</h3>
                                 <p class="portfolio__description">An automated device that collects floating wastes in the drainages and rivers.</p>
 				    <span class="button button--flex button--small portfolio__button>
-                                        View more
+					    View more
                                         <i class="uil uil-arrow-right button__icon"></i>
                                     </span>
                              </div>
 				
-				 <div class="services__modal">
+				</div>
+				 <!--  <div class="services__modal">
                                     <div class="services__modal-content">
                                         <h4 class="services__modal-title">ASE | TCS</h4>
                                         <i class="uil uil-times services__modal-close"></i>
@@ -749,8 +750,8 @@
                                             </li>
 					</ul>
                                     </div>
-                                </div>					   
-                        </div>
+                                </div> -->			   
+                        
 
                         <!--==================== PROJECT 2 ====================-->
                         <div class="portfolio__content grid swiper-slide">
