--- a/index.html
+++ b/index.html
@@ -737,6 +737,13 @@
                                     </span>
 				  
                              </div>
+				<div class="services__modal">
+                                    <div class="services__modal-content">
+                                        <h4 class="services__modal-title">B.Tech ECE | VVIT</h4>
+                                        <i class="uil uil-times services__modal-close"></i>
+				</ul>										
+                                    </div>
+                                </div>
                         </div>
 
                         <!--==================== PROJECT 2 ====================-->
