--- a/index.html
+++ b/index.html
@@ -731,10 +731,10 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Automatic Garbage Cleaner</h3>
                                 <p class="portfolio__description">An automated device that collects floating wastes in the drainages and rivers.</p>
-				    <span class="button button--flex button--small portfolio__button">
-                                        View more
-                                        <i class="uil uil-arrow-right button__icon"></i>
-                                    </span>
+				<a href="https://github.com/VeerendraK99/Automatic-Garbage-Cleaner" class="button button--flex button--small portfolio__button">
+                                   View More
+                                   <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                              </div>
 				
 				
@@ -747,10 +747,10 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Detection of Diabetic Retinopathy using LBP</h3>
                                 <p class="portfolio__description">Designed a algorithm for detection of diabetes using MATLAB and SVM .</p>
-                                <span class="button button--flex button--small portfolio__button">
-                                        View more
-                                        <i class="uil uil-arrow-right button__icon"></i>
-                                    </span>
+                                <a href="https://github.com/VeerendraK99/Detection-of-DR-using-LBP" class="button button--flex button--small portfolio__button">
+                                   View More
+                                   <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                             </div>
                         </div>
 
@@ -761,10 +761,10 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Waste Segregation using Image Processing</h3>
                                 <p class="portfolio__description">Developed a image processing algorithm using CNN for segregating of waste into plastic and others category.</p>
-                                <span class="button button--flex button--small portfolio__button">
-                                        View more
-                                        <i class="uil uil-arrow-right button__icon"></i>
-                                    </span>
+                                <a href="https://github.com/VeerendraK99/Automatic-Garbage-Cleaner" class="button button--flex button--small portfolio__button">
+                                   View More
+                                   <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                             </div>
                         </div>
 
@@ -775,10 +775,10 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">HTH Drone</h3>
                                 <p class="portfolio__description">Designed a drone for the collection of data points for weather analysis. The sensors incorporated in the drone collect data points which are sent to ThingSpeak cloud for visualization and analysis.</p>
-                                <span class="button button--flex button--small portfolio__button">
-                                        View more
-                                        <i class="uil uil-arrow-right button__icon"></i>
-                                    </span>
+                                <a href="https://github.com/VeerendraK99/Automatic-Garbage-Cleaner" class="button button--flex button--small portfolio__button">
+                                   View More
+                                   <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                             </div>
                         </div>
 
@@ -789,10 +789,10 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">FTP to Amazon S3</h3>
                                 <p class="portfolio__description"> Transferred 100GB data using Amazon Glue.</p>
-                                <span class="button button--flex button--small portfolio__button">
-                                        View more
-                                        <i class="uil uil-arrow-right button__icon"></i>
-                                    </span>
+                                <a href="https://github.com/VeerendraK99/Automatic-Garbage-Cleaner" class="button button--flex button--small portfolio__button">
+                                   View More
+                                   <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
                             </div>
                         </div>
 		
